@@ -1,3 +1,8 @@
+2005-06-27  Ross Burton  <ross@burtonini.com>
+
+	* acinclude.m4:
+	Removed, GStreamer ships the element check macro now.
+
 2005-06-25  Marcel Telka  <marcel@telka.sk>
 
 	* configure.in (ALL_LINGUAS): Added sk.
